apps/goatlint/src/snapshots/_-c fixtures__cli__no_console_off__eslintrc.json fixtures__cli__no_console_off__test.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -c fixtures/cli/no_console_off/eslintrc.json fixtures/cli/no_console_off/test.js
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 93 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
